--- a/client/angular.json
+++ b/client/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/bootswatch/dist/vapor/bootstrap.min.css",
+              "node_modules/bootswatch/dist/cyborg/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-clip-rotate-multiple.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
