--- a/client/angular.json
+++ b/client/angular.json
@@ -28,9 +28,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/bootswatch/dist/cyborg/bootstrap.min.css",
+              "node_modules/bootswatch/dist/litera/bootstrap.min.css",
               "node_modules/ngx-spinner/animations/ball-clip-rotate-multiple.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
