Pre continuous integration

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=dating.db"
+    "DefaultConnection": "Data Source=Localhost;Initial Catalog=DatingDb;Integrated Security=True;Trust Server Certificate=True"
   }
 }
